kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monkeytalks
  namespace: monkeytalks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monkeytalks
  template:
    metadata:
      labels:
        app: monkeytalks
    spec:
      containers:
      - name: monkeytalks
        image: replaceme
        ports:
        - containerPort: 5000
          name: app
