kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monkeytalks
  namespace: monkeytalks
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    name: app
  selector:
    app: monkeytalks
