kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monkeytalks-ingress
  namespace: monkeytalks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        real_ip_header CF-Connecting-IP;
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "monkeytalks"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "monkeytalks_socket"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"    
spec:
  tls:
  - hosts:
    - monkeytalks.cc
    - www.monkeytalks.cc
    secretName: monkeytalks-cc-server-secret
  rules:
  - host: monkeytalks.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: monkeytalks
          servicePort: 5000
  - host: www.monkeytalks.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: monkeytalks
          servicePort: 5000
